<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_inferior_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_inicio" />
    <item
        android:id="@+id/menu_inferior_timbre"
        android:icon="@drawable/timbre_nav"
        android:title="@string/menu_timbre" />
    <item
        android:id="@+id/menu_inferior_notificaciones"
        android:icon="@drawable/ic_notifications_active_black_24dp"
        android:title="@string/menu_notificaciones" />
    <item
        android:id="@+id/menu_inferior_mapa"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/menu_mapa" />
    <item
        android:id="@+id/menu_inferior_personas"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/menu_personas" />
</menu>