<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:fontFamily="@font/montserrat">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_plano"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_plano" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_perfil" />
    </group>

    <group>
            <item
                android:id="@+id/nav_acercade"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_acercade" />
            <item
                android:id="@+id/nav_cerrarsesion"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_cerrarsesion" />

    </group>

</menu>
