<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="es.upv.gnd.letslock.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_notificaciones"
        android:name="es.upv.gnd.letslock.ui.notificaciones.NotificacionesFragment"
        android:label="@string/menu_notificaciones"
        tools:layout="@layout/fragment_notificaciones" />

    <fragment
        android:id="@+id/nav_plano"
        android:name="es.upv.gnd.letslock.ui.plano.PlanoFragment"
        android:label="@string/menu_plano"
        tools:layout="@layout/fragment_plano" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="es.upv.gnd.letslock.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_acercade"
        android:name="es.upv.gnd.letslock.ui.acerca_de.AcercaDeFragment"
        android:label="@string/menu_acercade"
        tools:layout="@layout/fragment_acerca_de" />

    <fragment
        android:id="@+id/nav_cerrarsesion"
        android:name="es.upv.gnd.letslock.ui.cerrar_sesion.CerrarSesionFragment"
        android:label="@string/menu_cerrarsesion"
        tools:layout="@layout/fragment_cerrar_sesion" />
</navigation>